apps/media/qbittorrent-vpn-media/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: qbittorrent-vpn-media
spec:
  replicas: 0
  selector:
    matchLabels:
      app: qbittorrent-vpn-media
  template:
    metadata:
      labels:
        app: qbittorrent-vpn-media
    spec:
      containers:
      - name: qbittorrent-vpn-media
        # https://hub.docker.com/r/binhex/arch-qbittorrentvpn/tags
        image: binhex/arch-qbittorrentvpn:4.6.4-1-01
        resources:
          requests:
            memory: "4Mi"
            cpu: "250m"
          limits:
            memory: "10Gi"
            cpu: "8000m"
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
          privileged: true
        ports:
        - containerPort: 6881
        - containerPort: 80
        - containerPort: 8118
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: config
          mountPath: /config
        - name: downloads-nas-ssd
          mountPath: /downloads-ssd
        - name: downloads-nas-hdd
          mountPath: /downloads-hdd
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: downloads-nas-ssd
        nfs:
          server: "10.100.0.1"
          path: /mnt/ssd/kubernetes/qbittorrent-vpn-media-content
      - name: downloads-nas-hdd
        nfs:
          server: "10.100.0.1"
          path: /mnt/tank/downloads/qbittorrent-vpn-media
      - name: config
        hostPath:
          path: /lxc-configs/qbittorrent-vpn-media-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
