apps/media/qbittorrent-vpn-media/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-vpn-media
spec:
  selector:
    app: qbittorrent-vpn-media
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
