apps/media/qbittorrent-vpn-media/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: qbittorrent-media
spec:
  entryPoints:
    - websecure
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: authentik-server
          port: 80
      middlewares:
        - name: https-only
  tls:
    secretName: qbittorrent-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: qbittorrent-media-http
spec:
  entryPoints:
    - web
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: authentik-server
          port: 80
      middlewares:
        - name: https-only
